# emusmooth

./: ARCHITECTURE.md  BUILD.md  CI_README.md  CMakeLists.txt  GITHUB_ACTIONS_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  build.sh  config.json.template
.github/workflows/: build.yml
include/: APKManager.h  ConfigManager.h  Emulator.h  KeyMapper.h  UI.h
installer/: installer.nsi  license.txt
src/: APKManager.cpp  ConfigManager.cpp  Emulator.cpp  KeyMapper.cpp  UI.cpp  main.cpp
